[gd_scene load_steps=27 format=3 uid="uid://tune1uo51iiy"]

[ext_resource type="Texture2D" uid="uid://ci1jvmccr47e2" path="res://Resouces/Enemies/Bat.png" id="1_nd5ij"]
[ext_resource type="Script" path="res://Resouces/Enemies/Bat.gd" id="1_yhkqe"]
[ext_resource type="Texture2D" uid="uid://cf050w30dwo4u" path="res://Resouces/Shadows/SmallShadow.png" id="2_6l44y"]
[ext_resource type="Shader" path="res://Resouces/Interactions/BlinkShader.gdshader" id="2_kvict"]
[ext_resource type="PackedScene" uid="uid://cvae8aue7n4yk" path="res://Resouces/Interactions/Hurtbox.tscn" id="3_cu2bj"]
[ext_resource type="PackedScene" uid="uid://corrarjgaq8g6" path="res://Resouces/Interactions/stats.tscn" id="5_6hnnj"]
[ext_resource type="PackedScene" uid="uid://b07230rawkeas" path="res://Resouces/Interactions/PlayerDetectionZone.tscn" id="6_0rfru"]
[ext_resource type="PackedScene" uid="uid://chwdvjdgqlq4b" path="res://Resouces/Interactions/Hitbox.tscn" id="7_j4j6s"]
[ext_resource type="PackedScene" uid="uid://cmcybafqkjv3t" path="res://Resouces/Interactions/SoftCollision.tscn" id="8_410sr"]
[ext_resource type="PackedScene" uid="uid://dsikpjpkixvr1" path="res://Resouces/Enemies/WanderController.tscn" id="9_04gfa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5qi0r"]
resource_local_to_scene = true
shader = ExtResource("2_kvict")
shader_parameter/active = false

[sub_resource type="AtlasTexture" id="AtlasTexture_s2hth"]
atlas = ExtResource("1_nd5ij")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpg1s"]
atlas = ExtResource("1_nd5ij")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_42pjf"]
atlas = ExtResource("1_nd5ij")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_34f6c"]
atlas = ExtResource("1_nd5ij")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv51h"]
atlas = ExtResource("1_nd5ij")
region = Rect2(64, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_eloty"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2hth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpg1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42pjf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34f6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv51h")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ls5tw"]
radius = 4.07807

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xnpo0"]
radius = 6.5
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tng8x"]
radius = 56.0

[sub_resource type="CircleShape2D" id="CircleShape2D_qotou"]
radius = 3.78796

[sub_resource type="CircleShape2D" id="CircleShape2D_u2jks"]
radius = 2.81745

[sub_resource type="Animation" id="Animation_bdqwy"]
length = 0.001

[sub_resource type="Animation" id="Animation_7py6g"]
resource_name = "Start"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_0u8e0"]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ncdup"]
_data = {
"RESET": SubResource("Animation_bdqwy"),
"Start": SubResource("Animation_7py6g"),
"Stop": SubResource("Animation_0u8e0")
}

[node name="Bat" type="CharacterBody2D"]
collision_layer = 16
script = ExtResource("1_yhkqe")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_5qi0r")
sprite_frames = SubResource("SpriteFrames_eloty")
animation = &"Fly"
autoplay = "Fly"
frame_progress = 0.506041
offset = Vector2(0, -12)

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_6l44y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ls5tw")

[node name="Hurtbox" parent="." instance=ExtResource("3_cu2bj")]
collision_layer = 8
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -12)
shape = SubResource("CapsuleShape2D_xnpo0")

[node name="Stats" parent="." instance=ExtResource("5_6hnnj")]
max_health = 2

[node name="PlayerDetectionZone" parent="." instance=ExtResource("6_0rfru")]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_tng8x")

[node name="Hitbox" parent="." instance=ExtResource("7_j4j6s")]
collision_layer = 128
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_qotou")

[node name="SoftCollision" parent="." instance=ExtResource("8_410sr")]
scale = Vector2(1.41587, 1.40113)

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource("CircleShape2D_u2jks")

[node name="WanderController" parent="." instance=ExtResource("9_04gfa")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ncdup")
}

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_hurtbox_invincibility_started"]
[connection signal="invincibiliy_ended" from="Hurtbox" to="." method="_on_hurtbox_invincibiliy_ended"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]

[editable path="Hurtbox"]
[editable path="PlayerDetectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
